updates to packages.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monday-app",
+  "name": "react-memory-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,5 +13,18 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "This is a memory game based in React.  This game offers an assortment of pictures for the user to select.  Each time an images is selected, the arrangement of photos is reorganized.  The goal is to click through the entire assortment of pictures without pressing the same picture twice.  Can you do it?",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JettTech/React-Memory-Game.git"
+  },
+  "author": "Lisa Jetton",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JettTech/React-Memory-Game/issues"
+  },
+  "homepage": "https://github.com/JettTech/React-Memory-Game#readme"
 }
